회원가입기능삭제 로그인기능에 통합 임시닉네임 로그인 기능 추가 관련 세션 유지 요소들 삭제